fix(css-toolkit): body  overflow

--- a/src/shared/scss/fixes-toolkit.scss
+++ b/src/shared/scss/fixes-toolkit.scss
@@ -268,3 +268,9 @@
     }
   }
 }
+
+@include media-breakpoint-up(sm) {
+  .af-menu-open {
+    overflow-y: auto;
+  }
+}
